<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/room"
    android:orientation="vertical" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/transparency" >

		<ImageView android:id="@+id/imgBack" android:layout_width="32dp"
			android:layout_height="32dp" android:layout_gravity="center_vertical"
			android:adjustViewBounds="false" android:padding="2dp" android:src="@drawable/navigation_back" />
			<ImageView android:id="@+id/imgSave" android:layout_width="32dp"
			android:layout_height="32dp" android:layout_gravity="center_vertical"
			android:adjustViewBounds="false" android:padding="2dp" android:src="@drawable/collectionsn" />
			
		<TextView android:id="@+id/devicename" android:layout_width="match_parent"
			android:layout_height="wrap_content" android:layout_gravity="center"
			android:paddingLeft="2dp" android:text="客厅2路开关 - 神龙城501"
			android:textSize="16sp" />
	</LinearLayout>

	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:background="@color/darkgreen">
		<TextView android:id="@+id/textView1" android:layout_width="wrap_content"
			android:textColor="@color/yellow" android:paddingLeft="28dp"
			android:layout_height="wrap_content" android:text="(" />
		<TextView android:id="@+id/location" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:paddingLeft="2dp"
			android:textColor="@color/yellow" android:text="客厅进门左手边墙壁1.2米高位置处"
			android:textSize="14sp" />
		<TextView android:id="@+id/textView2" android:layout_width="wrap_content"
			android:textColor="@color/yellow" android:layout_height="wrap_content"
			android:text=")" />
	</LinearLayout>


	<LinearLayout android:id="@+id/moreinfo"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:orientation="horizontal">

		<ImageView
		    android:id="@+id/imgPicture"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:adjustViewBounds="true"
		    android:cropToPadding="false"
		    android:scaleType="fitXY"
		    android:src="@drawable/hint" />

		<TextView android:id="@+id/textInfo" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:padding="4dp"
			android:textSize="14sp" android:scrollbars="vertical"
			android:maxLines="6" android:text="@string/dvtype" />
	</LinearLayout>



	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:background="@color/darkgreen"
		android:orientation="horizontal">

		<Button
		    android:id="@+id/btnaddcmd"
		    android:layout_width="32dp"
		    android:layout_height="32dp"
		    android:layout_gravity="center_vertical"
		    android:layout_margin="2dp"
		    android:background="@drawable/content_new"
		    android:textSize="14sp" />

		<Button
		    android:id="@+id/btnclearcmd"
		    android:layout_width="32dp"
		    android:layout_height="32dp"
		    android:layout_gravity="center_vertical"
		    android:layout_margin="2dp"
		    android:background="@drawable/content_discard"
		    android:textSize="14sp" />

		<Spinner
		    android:id="@+id/hiscommand"
		    android:layout_width="fill_parent"
		    android:layout_height="match_parent"
		    android:layout_margin="2dp"
		    android:background="@drawable/shape" />

	</LinearLayout>

	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<EditText
		    android:id="@+id/inputcmdtext"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_margin="2dp"
		    android:background="@drawable/shape"
		    android:hint="@string/inputcmd"
		    android:imeOptions="actionNone"
		    android:singleLine="true"
		    android:visibility="invisible" />

	</LinearLayout>

		<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:background="@color/darkgreen"
		android:orientation="horizontal">

	<TextView
	    android:id="@+id/devselhint"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:gravity="center_vertical"
	    android:paddingLeft="2dp"
	    android:text="@string/subdevicename"
	    android:textAlignment="inherit"
	    android:textColor="@color/yellow"
	    android:textSize="14sp" />

		<Spinner
		    android:id="@+id/homedevices"
		    android:layout_width="fill_parent"
		    android:layout_height="36dp"
		    android:layout_margin="2dp"
		    android:background="@drawable/shape" />

	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/transparency"
	    android:padding="0dp" >

		<Button
		    android:id="@+id/btnDO"
		    android:layout_width="wrap_content"
		    android:layout_height="44dp"
		    android:layout_margin="2dp"
		    android:background="@drawable/button"
		    android:enabled="false"
		    android:minWidth="60dip"
		    android:padding="8dp"
		    android:text="@string/doaction"
		    android:textSize="13sp" />

		<Button
		    android:id="@+id/btnAO"
		    android:layout_width="wrap_content"
		    android:layout_height="44dp"
		    android:layout_margin="2dp"
		    android:background="@drawable/button"
		    android:enabled="false"
		    android:padding="8dp"
		    android:text="@string/aoaction"
		    android:textSize="13sp" />

		<Button
		    android:id="@+id/btnSO"
		    android:layout_width="wrap_content"
		    android:layout_height="44dp"
		    android:layout_margin="2dp"
		    android:background="@drawable/button"
		    android:enabled="false"
		    android:padding="8dp"
		    android:text="@string/soaction"
		    android:textSize="13sp" />

		<Button
		    android:id="@+id/btnUpdateState"
		    android:layout_width="wrap_content"
		    android:layout_height="44dp"
		    android:layout_margin="2dp"
		    android:background="@drawable/button"
		    android:padding="8dp"
		    android:text="@string/updatestate"
		    android:textSize="13sp" />

	</LinearLayout>

	<ListView android:id="@+id/lvDevices" android:layout_width="match_parent"
		android:layout_height="match_parent" android:layout_weight="1"
		android:background="@color/black_overlay"></ListView>
	
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView android:id="@+id/datahint" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:paddingLeft="2dp"
			android:textColor="@color/yellow" android:text=" "
			android:textSize="14sp" />
				
	</LinearLayout>
</LinearLayout>
